fix overflow-y scrolling

--- a/css/projects.css
+++ b/css/projects.css
@@ -9,8 +9,6 @@
 }
 
 
-
-
 .linkcell {
     height: 120px;
     width: 100%;
@@ -29,7 +27,6 @@
 .linkcell div {
     width: 100%;
     height: 100%;
-
 }
 
 .linkcell * {
@@ -38,6 +35,14 @@
     overflow-x: hidden;
     text-overflow: clip;
     overflow-y: hidden;
+}
+
+.linkcell:is(:nth-child(1)) {
+    margin-top: 0;
+}
+
+.linkcell:is(:nth-last-child(1)) {
+    margin-bottom: 0
 }
 
 
