--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ a:visited {
   width: var(--width-controller);
 
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: hidden;
 
   -webkit-border-radius: var(--border-radius-3);
   border-radius: var(--border-radius-3);
@@ -259,7 +259,9 @@ a:visited {
   background-color: var(--col-table-buttons);
 }
 
-
+#tablesdiv {
+  overflow-y:auto;
+}
 
 .tables {
   width: 100%;
@@ -278,6 +280,7 @@ a:visited {
   height: 100%;
   transition: all 1s var(--easer);
 }
+
 #profilepic {
   width: 50%;
   height: 240px;
@@ -328,17 +331,14 @@ a:visited {
 .image {
   width: 100%;
   height:200px;
-    background-size: cover;
-    background-color: black;
+  background-size: cover;
+  background-color: black;
 }
 
 #featured-images {
     height: 100%;
 }
 
-#img-mac-wallpaper {
-  background-image: url("../images/featured/MacWallpaper.png");
-}
 
 @keyframes flash_outline {
   0% {
